--- a/Assests/style.css
+++ b/Assests/style.css
@@ -18,7 +18,7 @@ header {
 }
 
 header h1 {
-    font-size: 30px;
+    font-size: 35px;
     color: white;
 }
 
@@ -73,9 +73,33 @@ h2 {
     border-radius: 120px;
     
 }
-
-
-
 /*Projects Section*/
 
-/*footer*/
+/*Footer Begins*/
+footer {
+    width: auto; height: 100px;
+    background-color:orange;
+    border-style: solid;
+    border-width: 5px;
+}
+
+footer h5 {
+    font-size: 30px;
+    color: white;
+}
+
+footer a {
+    text-decoration: none;
+    color: white;
+}
+
+.FooterLI {
+    list-style-type: none;
+    float: right;
+    margin-right: 40px;
+
+    color: white;
+    font-size: 30px;
+}
+
+ 
