--- a/Assests/style.css
+++ b/Assests/style.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
 }
 
 body {
@@ -20,6 +20,8 @@ header {
 header h1 {
     font-size: 35px;
     color: white;
+    float: left;
+    margin-top: 50px;
 }
 
 /*header link styling*/
@@ -27,7 +29,7 @@ header h1 {
     list-style-type: none;
     float: right;
     text-align: right;
-    margin-top: 15px;
+    margin-top: 50px;
     margin-right: 40px;
 }
 
@@ -63,7 +65,6 @@ h2 {
 /*start of Profile Pic section*/
 .ProfilePictureContainer img {
     display: flexbox; width: 100%; height: auto;
-    flex-wrap: wrap;
     justify-content: left;
     
 }
@@ -73,7 +74,37 @@ h2 {
     border-radius: 120px;
     
 }
+
 /*Projects Section*/
+h3 {
+    text-align: center;
+    font-size: 40px;
+    margin-top: 20px;
+    margin-bottom: 15px;
+}
+
+.BigProject img {
+    display: block;
+    height: 400px;
+    width: 300px;
+    margin-left: auto; 
+    margin-right: auto;
+    
+}
+
+.SmallProjects {
+    display: flex;
+    justify-content: center;
+}
+
+.SmallProjects img {
+    display: block;
+    height: 250px;
+    width: 175px;
+    margin-right: 30px;
+    margin-left: 30px;
+}
+
 
 /*Footer Begins*/
 footer {
@@ -86,6 +117,8 @@ footer {
 footer h5 {
     font-size: 30px;
     color: white;
+    float: left;
+    margin-top: 50px;
 }
 
 footer a {
@@ -96,6 +129,7 @@ footer a {
 .FooterLI {
     list-style-type: none;
     float: right;
+    margin-top: 50px;
     margin-right: 40px;
 
     color: white;
